[gd_scene load_steps=4 format=3 uid="uid://sjqigdgt5ocg"]

[ext_resource type="Texture2D" uid="uid://bu55juaqdu4n5" path="res://images/health_pickup.png" id="1_01648"]
[ext_resource type="Script" uid="uid://v72xbiif3wjr" path="res://health_pickup.gd" id="1_awyve"]

[sub_resource type="CircleShape2D" id="CircleShape2D_awyve"]
radius = 7.0

[node name="health_pickup" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_awyve")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_01648")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_awyve")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="picked_up" from="." to="." method="_on_picked_up"]
